# AudioEngine

app/: build.gradle
app/src/androidTest/java/com/example/shi/audioengine/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  PlatformDefs.h  audio_common.h  audioengine.cpp  audioengine.h  audioengine_priv.h  audioengine_utils.cpp  audioengine_utils.h  avtimer.cpp  avtimer.h  movieconfig.h  native-lib.cpp
app/src/main/cpp/AudioEngine/: AESinkFactory.cpp  AESinkFactory.h
app/src/main/cpp/AudioEngine/Engines/ActiveAE/: ActiveAESink.cpp  ActiveAESink.h
app/src/main/cpp/AudioEngine/Interfaces/: AE.h  AESink.h
app/src/main/cpp/AudioEngine/Sinks/: AESinkAUDIOTRACK.cpp  AESinkAUDIOTRACK.h
app/src/main/cpp/AudioEngine/Utils/: AEStreamInfo.cpp  AEStreamInfo.h
app/src/main/cpp/platform/android/jni/: AudioFormat.cpp  AudioFormat.h  AudioManager.cpp  AudioManager.h  Context.cpp  Context.h
app/src/main/cpp/threads/: SystemClock.cpp
app/src/main/cpp/utils/: AMLUtils.cpp  AMLUtils.h  SysfsUtils.cpp  TimeUtils.cpp
app/src/main/java/com/example/shi/audioengine/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/example/shi/audioengine/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
